--- a/tier/newstyle.css
+++ b/tier/newstyle.css
@@ -9,14 +9,29 @@ html,body{
 body {
 	font-family: 'Roboto', sans-serif;
 	text-align: center;
+	color: #242424;
+	background-color: #fefefe;
+}
+
+a, a:visited {
+	color: #51bff0;
+	text-decoration: none;
+} a:hover{ color: #43a2ce; }
+
+dt {
+	font-weight: 500;
+}
+
+dd {
+	margin-bottom: 5px;
 }
 
 #controls {
-	width: 774px;
-	height: 80px;
+	width: 100%;
+	height: 120px;
 	margin: 0 auto;
 	padding-right: 1px;
-	text-align: left;
+	text-align: center;
 	vertical-align: middle;
 }
 
@@ -29,23 +44,22 @@ h1 {
 
 #controls h1 {
 	display:inline-block;
+	text-shadow: 2px 2px #1d1d1d;
 }
 
 #buttons {
-	display:inline-block;
-	float:right;
-	margin-top:28px;
+	
 }
 
 #tablewrap {
 	padding: 30px 0;
-	background-color: #1A1A1A;
+	/*background-color: #c2c2c2;*/
 	width: 100%;
 	display:block;
 }
 
 td {
-	border: solid 3px black;
+	border: solid 3px #1d1d1d;
 	margin: 0;
 	padding: 0;
 	height: 64px;
@@ -56,18 +70,32 @@ tr {
 }
 
 table {
-	min-width: 1000px;
-	margin-left: auto;
-	margin-right: auto;
+	min-width: 100%;
+	margin: 0 auto;
 	border-spacing: 0;
-	border: solid 3px black;
-	background:#1A1A1A;
+	border: solid 3px #1d1d1d;
+	border-radius: 5px;
+	background:#2b2b2b;
 }
 
 .labelHolder {
-	min-width: 48px;
+	min-width: 10px;
+	max-width: 20px;
 	height: 64px;
+	width: 64px;
 	transition: background .3s;
+	line-height: 1em;
+}
+
+.tButtons {
+	width: 130px;
+}
+
+.tablePadding {
+	width: 95%;
+    margin: 0 auto;
+    display: block;
+}
 }
 
 .label {
@@ -83,7 +111,7 @@ table {
 }
 
 .tier {
-	width: 960px;
+	width: 100;
 	min-height: 64px;
 	text-align: left;
 }
@@ -93,28 +121,43 @@ table {
 }
 
 td:last-of-type {
-	background-color: black;
+	background-color: #1d1d1d;
 }
 
 #settings {
 	width: 64px;
 	height: 64px;
 	background: url('img/settings.png') center no-repeat;
+	/*background-color: #1d1d1d;*/
+	border-radius: 5px;
 	cursor: pointer;
 	transition: all .3s;
 	display:inline-block;
 }
 
 #settings:hover {
-	opacity: .5;
-	-webkit-transform: rotate(180deg);
-	transform: rotate(180deg);
+	transform: rotate(180deg)
+	/*background-color: #272727;*/
+}
+
+baby {
+	font-size: smaller;
+	vertical-align: super;
+}
+
+.controlList {
+	background-image: url(img/background.jpg);
+	background-size: 100%;
+	width: 100%;
+	color: white;
+	border-bottom: 2px solid #1d1d1d;
 }
 
 #moveButtons {
 	width: 64px;
 	height: 64px;
 	display:inline-block;
+	background-color: #1d1d1d;
 }
 div#moveUp {
 	height:32px;
@@ -130,14 +173,22 @@ div#moveDown {
 	cursor: pointer;
 	transition: all .3s;
 }
+div#deleteThisRow {
+	height:32px;
+	width:64px;
+	background: url('img/arrowdown.png') center no-repeat;
+	cursor: pointer;
+	transition: all .3s;
+}
 #moveButtons div:hover {
 	opacity: .5;
 }
 
 #char {
-	width: 768px;
+	width: 70%;
 	margin: 10px auto;
 	line-height: 0px;
+
 }
 
 img {
@@ -148,8 +199,11 @@ img {
 	display:inline-block;
 	height: 64px;
 	width: 64px;
-	background-position: center;
 	background-size: cover;
+	background-position: center;
+	margin-right: 2px;
+	image-rendering: -webkit-optimize-contrast;
+	image-rendering: -moz-crisp-edges;
 }
 
 #overlay {
@@ -176,12 +230,26 @@ img {
     text-align:center;
 	z-index: 2000;
 }
+#gameChange {
+	text-align: left;
+}
 #screenshotShow canvas {
 	width: 95%;
 }
 
+#screenshotShow p {
+	padding: 10px;
+	text-align: left;
+}
+
+#exportcode {
+	width: 80%;
+}
+
 #switchButtons {
 	line-height:2em;
+	text-align: left;
+	width: 80%;
 }
 
 #helpMenu {
@@ -189,9 +257,9 @@ img {
 }
 
 #colorselect {
-	width: 720px;
-	height: 40px;
-	margin: 0 4px;
+	width: 50%;
+	/*height: 40px;*/
+	margin: 0 auto;
 }
 
 #colorselect span {
@@ -228,6 +296,7 @@ button {
 	background: #fff;
 	box-shadow: 0 2px #dedede; /* found a way to shoehorn it back in boys */
 	border: solid 1px #dedede;
+	border-radius: 5px;
 	cursor: pointer;
 	outline: none;
 	position: relative;
@@ -239,9 +308,14 @@ button:active {
 	top: 1px;
 }
 
-@media (max-width: 1280px) and (max-device-width: 1280px) {
+/*@media (max-width: 1280px) and (max-device-width: 1280px) {
 	.tier{width:640px;}
 	table{min-width:0px;}
+}
+*/
+@media (max-width: 1176px) {
+	.tier {
+		width: auto;
 }
 
 @media handheld {
