--- a/tier/newstyle.css
+++ b/tier/newstyle.css
@@ -59,10 +59,25 @@ h1 {
 	display:block;
 }
 
+td.tButtons:nth-of-type(2n) {
+	border-left: none;
+	border-right: none;
+}
+
+td.tButtons:nth-of-type(3n) {
+	border-right: none;
+}
+
+
+td.tButtons:nth-of-type(5n){
+	border-left: none;
+}
+
 td {
 	border: solid 3px #1d1d1d;
 	margin: 0;
 	padding: 0;
+	width: 100%;
 	height: 64px;
 }
 
@@ -80,16 +95,18 @@ table {
 }
 
 .labelHolder {
-	min-width: 10px;
-	max-width: 20px;
+	min-width: 50px;
 	height: 64px;
-	width: 64px;
+	width: 5%;
 	transition: background .3s;
 	line-height: 1em;
+	text-align: center;
 }
 
 .tButtons {
-	width: 130px;
+/*	width: 130px;*/
+	background-color: #1d1d1d;
+	transition: all .3s;
 }
 
 .tablePadding {
@@ -97,6 +114,12 @@ table {
     margin: 0 auto;
     display: block;
 }
+
+#labelName {
+	text-align: center;
+	border-radius: 5px;
+	width: 245px;
+	resize: none;
 }
 
 .label {
@@ -112,7 +135,6 @@ table {
 }
 
 .tier {
-	width: 100;
 	min-height: 64px;
 	text-align: left;
 }
@@ -122,24 +144,13 @@ table {
 }
 
 td:last-of-type {
-	background-color: #1d1d1d;
-}
-
-#settings {
-	width: 64px;
-	height: 64px;
-	background: url('img/settings.png') center no-repeat;
 	/*background-color: #1d1d1d;*/
-	border-radius: 5px;
-	cursor: pointer;
-	transition: all .3s;
-	display:inline-block;
 }
 
-#settings:hover {
-	transform: rotate(180deg)
-	/*background-color: #272727;*/
+#saveSettings, #clearRow {
+	margin: 0px 5px;
 }
+
 
 baby {
 	font-size: smaller;
@@ -155,33 +166,68 @@ baby {
 }
 
 #moveButtons {
-	width: 64px;
-	height: 64px;
-	display:inline-block;
-	background-color: #1d1d1d;
+	margin: 0 auto;
 }
-div#moveUp {
+
+#funcButtons {
+	color: white;
+	margin:	auto;
+	vertical-align: middle;
+}
+
+.lrg {
+	font-size: 1.95em;
+}
+
+div#moveUp:hover, div#moveDown:hover, div#settings:hover, div#addButton:hover, div#deleteButton:hover {
+	opacity: 0.5;
+	cursor: pointer;
+}
+
+#settings {
 	height:32px;
-	width:64px;
+	width:32px;
+	background: url('img/settings.png') center no-repeat;
+	cursor: pointer;
+	transition: all .3s;
+	border-right: none;
+}
+#addButton {
+	height:32px;
+	width:32px;
+	background: url('img/plus.png') center no-repeat;
+	cursor: pointer;
+	transition: all .3s;
+}
+#deleteButton {
+	width:32px;
+	height:32px;
+	background: url('img/minus.png') center no-repeat;
+	cursor: pointer;
+	transition: all .3s;
+}
+#moveUp {
+	height:32px;
+	width:32px;
 	background: url('img/arrowup.png') center no-repeat;
 	cursor: pointer;
 	transition: all .3s;
 }
-div#moveDown {
+#moveDown {
 	height:32px;
-	width:64px;
+	width:32px;
 	background: url('img/arrowdown.png') center no-repeat;
 	cursor: pointer;
 	transition: all .3s;
 }
-div#deleteThisRow {
+#deleteThisRow {
 	height:32px;
-	width:64px;
+	width:32px;
 	background: url('img/arrowdown.png') center no-repeat;
 	cursor: pointer;
 	transition: all .3s;
 }
-#moveButtons div:hover {
+#moveButtons:hover {
 	opacity: .5;
 }
 
@@ -200,7 +246,8 @@ img {
 	display:inline-block;
 	height: 64px;
 	width: 64px;
-	background-size: cover;
+	border-radius: 50%;
+	background-size: 112%;
 	background-position: center;
 	margin-right: 2px;
 	image-rendering: -webkit-optimize-contrast;
@@ -265,16 +312,16 @@ img {
 
 #colorselect span {
 	width: 48px;
-	height: 40px;
-	margin: 0;
+	height: 48px;
+	margin: 2px;
 	display: inline-block;
 	transition: box-shadow .1s;
 	cursor: pointer;
+	border: 2px solid #00000021;
 }
 
 #colorselect span.selected {
-	box-shadow: inset 4px 4px red,
-				inset -4px -4px red;
+	border-color: white;
 }
 
 #close {
