--- a/tier/newstyle.css
+++ b/tier/newstyle.css
@@ -118,9 +118,13 @@ table {
 #labelName {
 	text-align: center;
 	border-radius: 5px;
-	width: 245px;
-	resize: none;
+	width: 20%;
+	max-width: 100%;
+	min-width: 20%;
+	resize: horizontal;
 }
+
+
 
 .label {
 	min-width: 56px;
@@ -268,6 +272,10 @@ img {
 	transition: opacity .3s;
 }
 
+#modal, #gameChange, #screenshotShow, #helpMenu {
+	border-radius: 5px;
+}
+
 #overlay #modalWrapper #modal,#gameChange,#helpMenu,#screenshotShow {
 	position: relative;
 	display:none;
@@ -285,13 +293,23 @@ img {
 	width: 95%;
 }
 
+canvas {
+	height: auto !important;
+	width: auto !important;
+	max-width: 90% !important;
+}
+
 #screenshotShow p {
 	padding: 10px;
 	text-align: left;
 }
 
 #exportcode {
-	width: 80%;
+	width: 30%;
+	height: 10%;
+	text-align: center;
+	border-radius: 5px;
+	resize: none;
 }
 
 #switchButtons {
@@ -324,17 +342,29 @@ img {
 	border-color: white;
 }
 
+#close:before {
+	content: "\00D7";
+}
+
 #close {
+	cursor: pointer;
 	position: absolute;
 	top:0;
 	right:0;
-	width:16px;
-	height:16px;
-	margin:16px;
-	background:url("img/close.png");
+	width:24px;
+	height:24px;
+	font-size: 1.25em;
+	margin: 8px;
+	border-radius: 0px 5px 0px 5px;
+	/*margin:16px;*/
+	/*font-style: italic;*/
+	text-align: center;
 	opacity: .5;
 	transition: opacity .3s;
-	cursor: pointer;
+	color:white;
+	background-color: #FF7F7F;
+	/*font-size: 1.45em;*/
+	/*background:url("img/close.png");*/
 }
 #close:hover {
 	opacity:1;
