--- a/tier/newstyle.css
+++ b/tier/newstyle.css
@@ -45,7 +45,7 @@ h1 {
 
 #controls h1 {
 	display:inline-block;
-	text-shadow: 2px 2px 2px #4975a5;
+	text-shadow: 2px 2px 5px #2f7fb7;
 }
 
 #buttons {
